--- a/backend/Calendar.API/appsettings.json
+++ b/backend/Calendar.API/appsettings.json
@@ -9,5 +9,10 @@
     "Server": "Server=localhost;Port=5432;Database=Calendar;User Id=username;Password=password;",
 
   },
+  "Jwt": {
+    "Issuer": "http://localhost:5290",
+    "Default": "Information",
+    "Key": "super-secret-key-for-signing-tokens",
+  },
   "AllowedHosts": "*"
 }
