--- a/backend/Calendar.API/appsettings.Development.json
+++ b/backend/Calendar.API/appsettings.Development.json
@@ -4,5 +4,18 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "http://localhost:59611",
+          "https://localhost:44320",
+          "http://localhost:5290",
+          "https://localhost:7066"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      }
+    }
   }
 }
