--- a/backend/Calendar.Services/Calendar.Services.csproj
+++ b/backend/Calendar.Services/Calendar.Services.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Calendar.Data\Calendar.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
